tests/fixtures/valid_programs/simple_function.cryo
// Simple function test - should compile successfully
function add(x: int, y: int) -> int {
    return x + y;
}

function main() -> int {
    const result: int = add(5, 10);
    return result;
}