tests/fixtures/invalid_programs/type_error.cryo
// Type error - string assigned to int
function main() -> int {
    const x: int = "this should be a number";
    return x;
}